# cake-gemm-hpc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  timer.cpp
include/: matrix.h  timer.h
results/: cpu_summary.csv  summary.csv
scripts/: plot_cpu_results.py  plot_results.py
src/: main.cpp
src/cpu/: blocked_gemm.cpp  naive_gemm.cpp
src/gpu/: cublas_gemm.cu  tiled_gemm.cu
src/utils/: matrix.cpp  timer.cpp
